--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,3 +5,12 @@
 body {
   background-color: rgb(240, 248, 255);
 }
+
+.filter {
+  text-align: center;
+}
+
+h1 {
+  text-align: center;
+  font-size: 30px;
+}
